# cvex

./: CMakeLists.txt  README.md  cvex_proj.sln  cvex_proj.vcxproj  cvex_proj.vcxproj.filters  main.cpp
include/: LiteMath.h  cmath.h  lite_math.h  vfloat4.h  vfloat4_arm.h  vfloat4_gcc.h  vfloat4_x64.h  vfloat8_gcc.h  vfloat8_x64.h
tests/: LiteMathOld.h  tests.h  tests_all.cpp  tests_vfloat4.cpp  tests_vmatrix4.cpp
